--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/rules/http/servlet-api/service-graph.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/rules/http/servlet-api/service-graph.yml
@@ -22,7 +22,7 @@ inspectit:
         default-rule: true
         include:
           'r_servicegraph_inbound_record_method': true
-          'r_servletapi_detect_entry':
+          'r_servletapi_detect_entry': true
         scopes:
           's_servletapi_servlet_service': true
           's_servletapi_filter_doFilter': true
@@ -41,4 +41,3 @@ inspectit:
             action: 'a_assign_value'
             data-input:
               'value': 'http_is_error'
-      
