set up system test

--- a/inspectit-ocelot-agent/build.gradle
+++ b/inspectit-ocelot-agent/build.gradle
@@ -182,6 +182,9 @@ dependencies {
             // we still use the v4 client in system tests, since the default instrumentation does not work for v5
             libs.orgApacheHttpcomponentsHttpclient,
 
+            // testing of the jms instrumentation
+            libs.orgApacheActivemqApacheActivemq,
+
             // Switching to spring-boot dependency management excludes somehow magically the transitive
             // dependency commons-logging:commons-logging of org.apache.httpcomponents:httpclient.
             // Spring-Boot applications include org.springframework:spring-jcl, which provides a better
