--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -78,6 +78,8 @@ log4j = "log4j:log4j:1.2.17"
 netBytebuddyByteBuddy = "net.bytebuddy:byte-buddy:1.17.6"
 # @pin logback 7.* is the last version for Java 8
 netLogstashLogbackLogstashLogbackEncoder = "net.logstash.logback:logstash-logback-encoder:7.4"
+# @pin 5.16.* is last version to support Java 8
+orgApacheActivemqApacheActivemq = "org.apache.activemq:apache-activemq:5.16.8"
 orgApacheCommonsCommonsLang3 = "org.apache.commons:commons-lang3:3.18.0"
 orgApacheCommonsCommonsMath3 = "org.apache.commons:commons-math3:3.6.1"
 orgApacheHttpcomponentsHttpclient = "org.apache.httpcomponents:httpclient:4.5.14"
