add system test

--- a/inspectit-ocelot-agent/src/system-test/resources/config/global-propagation-test.yml
+++ b/inspectit-ocelot-agent/src/system-test/resources/config/global-propagation-test.yml
@@ -2,6 +2,7 @@
 #used by:
 # - HttpUrlConnectionContextPropagationTest
 # - ServletApiContextPropagationTest
+# - JmsApiContextPropagationTest
 inspectit:
   instrumentation:
     data:
