--- a/.github/workflows/agent_test.yml
+++ b/.github/workflows/agent_test.yml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
-          name: 'test-results'
+          name: test-results-${{ env.DOCKER_IMAGE }}
           path: |
             inspectit-ocelot-agent/build/test-results
             inspectit-ocelot-core/build/test-results
