--- a/components/inspectit-ocelot-configurationserver/src/main/resources/application.yml
+++ b/components/inspectit-ocelot-configurationserver/src/main/resources/application.yml
@@ -20,6 +20,8 @@ spring:
     baselineOnMigrate: true
     baselineVersion: 1
 
+  threads.virtual.enabled: true
+
 # server properties - see https://docs.spring.io/spring-boot/docs/current/reference/html/appendix-application-properties.html#server-properties
 server:
   port: 8090
