--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/fallback/fallback.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/fallback/fallback.yml
@@ -1,6 +1,6 @@
 #------------------------
 # This file contains fallback configuration overwrites in case the agent is started with an invalid configuration
-# In this case, the agent tries to preserve the inspecit.config settings and to attach them to the fallback configuration
+# In this case, the agent tries to preserve the inspectit.config settings and to attach them to the fallback configuration
 # to make sure that runtime configuration updated are possible without a restart
 #------------------------
 inspectit:
@@ -23,5 +23,5 @@ inspectit:
     agent-status:
       validity-period: 1h
 
-  log-preloading:
+  agent-commands:
     enabled: false
