improve default propagation

--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/actions/http/apache-client.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/actions/http/apache-client.yml
@@ -76,7 +76,7 @@ inspectit:
           Iterator it = headers.entrySet().iterator();
           while (it.hasNext()) {
             Map$Entry e = (Map$Entry) it.next();
-            _arg1.setHeader((String) e.getKey(), (String) e.getValue());
+            _arg1.addHeader((String) e.getKey(), (String) e.getValue());
           }
 
       'a_apacheclient_upPropagation':
