--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/actions/http/servlet-api.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/actions/http/servlet-api.yml
@@ -105,7 +105,7 @@ inspectit:
               Iterator it = headers.entrySet().iterator();
               while (it.hasNext()) {
                 Map$Entry e = (Map$Entry) it.next();
-                res.setHeader((String) e.getKey(), (String) e.getValue());
+                res.addHeader((String) e.getKey(), (String) e.getValue());
               }
             }
           }
